--- a/user-registration.html
+++ b/user-registration.html
@@ -11,25 +11,45 @@
 	<body>
 		<form>
 			<header class = "headerContainer">
-				<h1></h1>
+				<h1>User Registation Page</h1>
+			</header>
 					<div>
                         <label for="text">User Name</label>
                         <input type="text" id="name" name="name">
-                        <error-output class="name-error" for="text"> </error-output>
+                        <error-output class="error-name" for="text"> </error-output>
+					</div>
+
+					<div>
+                        <label for="email">Email</label>
+                        <input type="email" id="mail-id" name="mail-id">
+                        <error-output class="error-email" for="email"> </error-output>
 					</div>
 		</form>
 	<script>
-        const userName = document.querySelector('#name');
-        const userNameError = document.querySelector('.name-error');
+		 //user name
+        const userName =  document.querySelector('#name');
+        const userNameError = document.querySelector('.error-name');
+
+		  //email
+        const emaiId =document.querySelector('#mail-id');
+        const mailIdError = document.querySelector('.error-email');
         
         userName.addEventListener('input',function () {
             let userNameRegex= RegExp('^[A-Z]{1}[a-z]{2,}$');
             if(userNameRegex.test(userName.value))
                 userNameError.textContent = "";
             else
-                userNameError.textContent = "Incorrect Username"
+                userNameError.textContent = "Incorrect Username";
 
-        })
+        });
+
+		emaiId.addEventListener('input',function () {
+            let emailRegex= RegExp('^([a-z0-9]+([-$%&+.]?[0-9a-z]+))[@][a-z0-9]+[.][a-z]{3,}([.][a-z]{2,})?$');
+            if(emailRegex.test(emaiId.value))
+				mailIdError.textContent = "";
+            else
+				mailIdError.textContent = "Incorrect Email";
+        });
 	</script>
 	</body>
 <html>
